Resolved Issue: Overflowing horizontal

--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 body{
     background: white;
     font-family: lato;
+    overflow-x:hidden;
 }
 
 .verticalStrip {
-    position: fixed;
+    position: absolute;
     top: 4rem;
     left: 0;
     width: 40%; 
